remove always false condition + swap to toList()